--- a/src/app/dashboard/video-list/video-list.component.html
+++ b/src/app/dashboard/video-list/video-list.component.html
@@ -1,3 +1,11 @@
-<p>
-  video-list works!
-</p>
+
+<ul>
+  <li class="collection-item" *ngFor="let demo of demoData; index as i">
+    <h5>Title: {{demo.title}}</h5>
+    <span>Author: {{demo.author}}</span>
+  </li>
+</ul>
+
+
+<!-- * Modify the video list template to display each video's title and
+  author using `*ngFor`. -->
