Step 205 - video item component

--- a/src/app/dashboard/video-list/video-list.component.html
+++ b/src/app/dashboard/video-list/video-list.component.html
@@ -1,7 +1,6 @@
 <div class="collection">
   <div class="collection-item" *ngFor="let video of videoData" (click)="onSelectVideo(video)" [class.selected]="selectedVideo === video">
-      <strong>Title: {{video.title}}</strong><br>
-      <span>Author: {{video.author}}</span>
+    <app-video-item [video]="video"></app-video-item>
   </div>
 </div>
 
