Step 300 - get data via http

--- a/src/app/dashboard/video-dashboard/video-dashboard.component.html
+++ b/src/app/dashboard/video-dashboard/video-dashboard.component.html
@@ -1,6 +1,7 @@
 <div class="row">
   <div class="col m3">
-    <app-video-list (videoSelected)="setVideo($event)"></app-video-list>
+    <!-- <app-video-list (videoSelected)="setVideo($event)"></app-video-list> -->
+    <app-video-list (videoSelected)=" videoSelected = $event"></app-video-list>
   </div>
   <div class="col m6">
     <app-video-player [video]="videoSelected"></app-video-player>
