Step 404 - route data via http request

--- a/src/app/dashboard/video-player/video-player.component.html
+++ b/src/app/dashboard/video-player/video-player.component.html
@@ -1,3 +1,4 @@
-<div *ngIf="videoId" class="card-panel">
-  {{videoId | async}}
+<div *ngIf="video" class="card-panel">
+  <strong>{{(video | async)?.title}}</strong>
+  <div>{{(video | async)?.author}}</div>
 </div>
